@startuml Conception_Model_Reporting
hide circle
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultMonospaceFontName Arial
skinparam defaultFontSize 10
skinparam linetype ortho
skinparam shadowing false
skinparam wrapWidth 1200
skinparam nodesep 6
skinparam ranksep 220
top to bottom direction

title Sous-diagramme 4/4 — Reporting, Notifications et Historique
class RapportJournalier {
  - rapport_id : int
  - admin_id : int
  - date_rapport : date
  - contenu : text
  - date_creation : datetime
  + genererPdf() : File
  + envoyer(destinataires : List) : void
}

class Notification {
  - notification_id : int
  - utilisateur_id : int
  - message : varchar
  - date_notification : datetime
  - lue : boolean
  + marquerLue() : void
  + envoyer() : void
}

class ConnexionHistorique {
  - log_id : int
  - utilisateur_id : int
  - date_connexion : datetime
  - ip_adresse : varchar
  + enregistrer() : void
}

class PresenceCampus {
  - presence_id : int
  - charge_id : int
  - date_presence : date
  - nombre_arrives : int
  - nombre_partis : int
  - nombre_presents : int
  + calculerPresents() : int
  + mettreAJour(arrives : int, partis : int) : void
}

class DemandeHuile {
  - demande_huile_id : int
  - busudm_id : int
  - mecanicien_id : int
  - date_demande : date
  - statut_demande : enum
  - numero_aed : varchar
  + aprover() : void
  + rejeter(raison : String) : void
}

' Associations internes à ce sous-domaine
RapportJournalier "0..*" -- "1" Administrateur : rediger
RapportJournalier "0..*" -- "0..1" Responsable : rediger
Notification "0..*" -- "1" Utilisateur : notifier
ConnexionHistorique "0..*" -- "1" Utilisateur : enregistrer
PresenceCampus "0..*" -- "0..1" ChargeTransport : mettre_a_jour

DemandeHuile "0..*" -- "0..1" Mecanicien : traiter
DemandeHuile "0..*" -- "0..1" BusUDM : demander

@enduml
